test/fails/bad_generics/declare1.lgl
type pos is float[3];
type color is float[3];

with pos    T: declare float dot(T x, T y);
with color  T: declare float dot(T x, T y);

void main() {
    pos x = [1., 2., 3.];
    color red = [1., 0., 0.];
    auto fail = dot(x, red);  // The intended catch
}